--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- banner section start here -->
     <section>
         <div class="relative bg-cover bg-no-repeat bg-center lg:min-h-screen bg-black/40 bg-blend-overlay"
-            style="background-image: url(../src/image/banner.jpeg);">
+            style="background-image: url(./src/image/banner.jpeg);">
 
             <div class="absolute top-5 right-5 md:hidden">
                 <!-- Mobile Menu Icon -->
@@ -215,7 +215,7 @@
         <div class=" grid grid-cols-1 px-5 mt-10  md:grid-cols-2 lg:px-12  lg:grid-cols-3 gap-8">
             <div class="w-full h-auto group">
                 <div class="relative overflow-hidden ">
-                    <img class="w-96 h-96 flex-shrink-0" src="../src/image/1.png" alt="">
+                    <img class="w-96 h-96 flex-shrink-0" src="./src/image/1.png" alt="">
                     <div
                         class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                         <h3 class=" text-white text-2xl font-bold">COMPANY TYPEFACE</h3>
@@ -225,7 +225,7 @@
             </div>
             <div class="w-full h-auto group">
                 <div class="relative overflow-hidden">
-                    <img class="w-96 h-96 flex-shrink-0" src="../src/image/2.png" alt="">
+                    <img class="w-96 h-96 flex-shrink-0" src="./src/image/2.png" alt="">
                     <div
                         class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                         <h3 class=" text-white text-2xl font-bold">NATURE VIBES</h3>
@@ -235,7 +235,7 @@
             </div>
             <div class="w-full h-auto group">
                 <div class="relative overflow-hidden">
-                    <img class="w-96 h-96 flex-shrink-0" src="../src/image/4.png" alt="">
+                    <img class="w-96 h-96 flex-shrink-0" src="./src/image/4.png" alt="">
                     <div
                         class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                         <h3 class=" text-white text-2xl font-bold">TYPOGRAPHY DESIGN</h3>
@@ -245,7 +245,7 @@
             </div>
             <div class="w-full h-auto group">
                 <div class="relative overflow-hidden">
-                    <img class="w-96 h-96 flex-shrink-0" src="../src/image/3.png" alt="">
+                    <img class="w-96 h-96 flex-shrink-0" src="./src/image/3.png" alt="">
                     <div
                         class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                         <h3 class=" text-white text-2xl font-bold">DELIVER RESULT</h3>
@@ -255,7 +255,7 @@
             </div>
             <div class="w-full h-auto group">
                 <div class="relative overflow-hidden">
-                    <img class="w-96 h-96 flex-shrink-0" src="../src/image/5.png" alt="">
+                    <img class="w-96 h-96 flex-shrink-0" src="./src/image/5.png" alt="">
                     <div
                         class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                         <h3 class=" text-white text-2xl font-bold">TRULY CREATIVE</h3>
@@ -265,7 +265,7 @@
             </div>
             <div class="w-full h-auto group">
                 <div class="relative overflow-hidden">
-                    <img class="w-96 h-96 flex-shrink-0" src="../src/image/6.png" alt="">
+                    <img class="w-96 h-96 flex-shrink-0" src="./src/image/6.png" alt="">
                     <div
                         class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                         <h3 class=" text-white text-2xl font-bold">BEST OF THE WEB</h3>
@@ -285,7 +285,7 @@
         <div id="testimonialSlider" class="lg:px-10 px-5 relative testimonial-container">
             <!-- Testimonials -->
             <div class="testimonial-slide">
-                <img class="w-24 rounded-full mx-auto md:my-10" src="../src/image/men (1).jpg" alt="">
+                <img class="w-24 rounded-full mx-auto md:my-10" src="./src/image/men (1).jpg" alt="">
                 <p class="md:my-10 text-xl md:mx-20"><em class="text-5xl font-bold">“</em> Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor.
                     Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque
@@ -295,7 +295,7 @@
             </div>
 
             <div class="testimonial-slide hidden">
-                <img class="w-24 rounded-full mx-auto my-10" src="../src/image/man2.jpg" alt="">
+                <img class="w-24 rounded-full mx-auto my-10" src="./src/image/man2.jpg" alt="">
                 <p class="my-10 text-xl md:mx-20"><em class="text-5xl font-bold">“</em>
                     Client Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget risus porta, tincidunt
                     turpis at, interdum tortor.
@@ -325,7 +325,7 @@
             <div class="mt-16 w-fit  ">
                 <div class=" group">
                     <div class="relative overflow-hidden ">
-                        <img class="w-fit h-96 flex-shrink-0 " src="../src/image/7.jfif" alt="">
+                        <img class="w-fit h-96 flex-shrink-0 " src="./src/image/7.jfif" alt="">
                         <div
                             class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                             <h3 class=" text-white text-9xl font-thin">+</h3>
@@ -346,7 +346,7 @@
             <div class="mt-16 w-fit  ">
                 <div class=" group">
                     <div class="relative overflow-hidden ">
-                        <img class="w-fit h-96 flex-shrink-0 " src="../src/image/9.jfif" alt="">
+                        <img class="w-fit h-96 flex-shrink-0 " src="./src/image/9.jfif" alt="">
                         <div
                             class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                             <h3 class=" text-white text-9xl font-thin">+</h3>
@@ -367,7 +367,7 @@
             <div class="mt-16 w-fit  ">
                 <div class=" group">
                     <div class="relative overflow-hidden ">
-                        <img class="w-fit h-96 flex-shrink-0 " src="../src/image/8.jfif" alt="">
+                        <img class="w-fit h-96 flex-shrink-0 " src="./src/image/8.jfif" alt="">
                         <div
                             class="h-full w-full absolute bg-black/80 flex flex-col items-center justify-center -bottom-10 group-hover:-bottom-0 opacity-0 group-hover:opacity-100 transition-all duration-500">
                             <h3 class=" text-white text-9xl font-thin">+</h3>
