--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- banner section end here -->
 
     <!-- Provide the best section start here -->
-    <section class="flex flex-wrap mt-5 lg:my-20 lg:mx-16 lg:gap-10 justify-center  md:justify-center md:my-14 md:gap-6 m-0 p-0">
+    <section class="flex flex-wrap mt-5 lg:my-20 lg:mx-16 lg:gap-10  md:justify-center md:my-14 md:gap-6 m-0 p-0">
         <div
             class="sm:basis-2/4 font-serif flex flex-col lg:justify-start lg:place-items-start md:pt-6 md:mx-auto lg:pt-8">
             <h3 class="text-3xl sm:text-3xl lg:text-5xl lg:font-bold md:text-3xl font-semibold text-center ">Provide the best <br> solutions with great
