--- a/src/index.html
+++ b/src/index.html
@@ -413,7 +413,7 @@
                     Many desktop lishing
                     packages and web page editors</p>
                 <div class="flex flex-row justify-around mt-3">
-                    <a href="#"><iconify-icon class="text-3xl " onclick="openPage('https://www.facebook.com/')"
+                    <a href="#"><iconify-icon class="text-3xl " onclick="openPage('https://www.facebook.com/login')"
                             icon="teenyicons:facebook-solid"></iconify-icon></a> <a href="#"><iconify-icon
                             class="text-3xl" onclick="openPage('https://twitter.com/i/flow/login')"
                             icon="formkit:twitter"></iconify-icon></a> <a href="#"><iconify-icon class="text-3xl"
